--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,14 @@ h1 {
 h2 {
   font-size: 1.5em;
   margin-top: .5em;
+  color:yellow;
 }
 
 h3 {
   font-family: 'Gabriela', serif;
-  font-size: 1.5em;
+  font-size: 1em;
   margin-top: .5em;
+  color: rgb(11, 121, 11);
 }
 
 img {
@@ -52,12 +54,14 @@ img {
 }
 
 p {
-  font-size: 1em;
+  font-size: 0.6em;
+  color: rgb(100, 100, 100);
 }
 
 a {
-  color: black;
+  color: rgb(73, 86, 223);
   text-decoration: none;
+  font-size: 0.6em;
 }
 
 a:hover {
